# JSD

./: .gitignore  README.md
match_reporter/: CHANGELOG.md  LICENSE  runtests.sh  setup.cfg  setup.py
match_reporter/match_reporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
match_reporter/reporter_jsd/: Matches.txt  Teams.txt  __init__.py  example1.dot  example1.rpt  generator.py  instalation.txt  matches.csv  reporter.dot  reporter.tx  reporter_interpreter.py  teams.csv
match_reporter/reporter_jsd/css/: General.css  teams.css
match_reporter/reporter_jsd/files/csv_files/: Chelsea.csv  ChelseaReferees.csv  Man United.csv  ManUnited.csv  PremierLeaguePlayerMatchesReferees.csv  matches.csv  player_matches.csv  players.csv  referees.csv
match_reporter/reporter_jsd/files/html_files/: Chelsea.html  ChelseaReferees.html  Man United.html  ManUnited.html  PremierLeaguePlayerMatches.html  matches.html  player_matches.html  players.html
match_reporter/reporter_jsd/generated_files/csv_files/: ChelseaMatches.csv  ChelseaMatchesReferees.csv  ChelseaTeam.csv  ManUnited.csv  ManUnitedMatches.csv  ManUnitedMatchesReferees.csv  Marcos Alonso.csv  Marcos AlonsoMatches.csv  PremierLeaguePlayerMatches.csv  PremierLeaguePlayers.csv
match_reporter/reporter_jsd/generated_files/dot_files/: reporter.dot
match_reporter/reporter_jsd/generated_files/html_files/: ChelseaMatches.html  ChelseaMatchesReferees.html  ChelseaTeam.html  ManUnited.html  ManUnitedMatches.html  ManUnitedMatchesReferees.html  ManUnitedReferees.html  (+6 more)
match_reporter/reporter_jsd/j2/: Home.j2
match_reporter/reporter_jsd/rpt/: match.rpt  player.rpt  team.rpt
match_reporter/reporter_jsd/tx/: reporter.tx
(+19 files in other folders)
