[metadata]
name = match_reporter
author = /
author_email = /
license = MIT
description = /
keywords = textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires = 
    mkdocs
    numpy
    pandas
    pdfkit
    psycopg2
    textX
    textX-dev

include_package_data = True
package_dir =
    reporter_jsd = reporter_jsd

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]
    reporter_jsd = *.tx, rpt/*.rpt, j2/*.j2, css/*.css, home.png

[options.entry_points]
textx_languages =
    reporter = reporter_jsd:reporter_language

textx_generators =
    reporter_gen = reporter_jsd:reporter_generate_files

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90